--- a/src/sass/blocks/modal/_modal.scss
+++ b/src/sass/blocks/modal/_modal.scss
@@ -59,10 +59,10 @@
     }
 }
 
-.hide {
-    display:none
+.show {
+    display: block;
 }
 
-.show {
-    display:block
+.hide {
+    display: none;
 }
